--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "mola-input-ros1"]
 	path = modules/mola-input-ros1
 	url = https://github.com/MOLAorg/mola-input-ros1.git
+[submodule "modules/mola-launcher"]
+	path = modules/mola-launcher
+	url = git@github.com:zarmomin/mola-launcher.git
