fixes dbow2 external include project name

--- a/externals/DBoW2/CMakeLists.txt
+++ b/externals/DBoW2/CMakeLists.txt
@@ -9,7 +9,7 @@
 # =================================================================
 # License: 3-BSD
 # =================================================================
-project(dbow2)
+project(DBoW2)
 
 set(HDRS
   DBoW2/include/DBoW2/BowVector.h
